# jma-codes

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  go.mod  pyproject.toml  setup.cfg
codegen/go/: gen_area_codes.py
datasrc/: README.md
datasrc/amedas/: ame_master_20220701.csv  ame_master_20221122.csv  (+6 more)
go-jmacodes/: area_codes.go
json/: AdditionalCommentEarthquake.json  AreaEpicenter.json  AreaEpicenterAbbreviation.json  AreaEpicenterDetail.json  AreaEpicenterSuppliment.json  AreaFloodForecast.json  AreaForecast.json  AreaForecastEEW.json  AreaForecastLocalEEW.json  AreaInformationPrefectureEarthquake.json  AreaMarineA.json  AreaMarineJ.json  AreaRiver.json  AreaTsunami.json  CoastTsunami.json  EarthquakeForecast.json  EarthquakeInformation.json  EarthquakeWarning.json  HazardousRain.json  HazardousWindWatch.json  MarineWarning.json  PhenologicalType.json  PointRealtimeSeismicIntensity.json  PointSeismicIntensity.json  PointSeismicLgIntensity.json  PointTsunami.json  PointVolcano.geojson  PointVolcano.json  RiverOffice.json  Significancy.json  SoilWarning.json  TokaiInformation.json  TsunamiWarning.json  VolcanicWarning.json  WaterLevelStation.json  WeatherWarning.json  WmoObservingStations.geojson  WmoObservingStations.json  amedas_ame.geojson  amedas_ame.json  (+3 more)
tools/: amedas.py  area_flood_forecast.py  area_forecast.py  area_local_codes.py  area_marine_aj.py  area_river.py  jmaxml_info_codes.py  phenological_type.py  river_offce.py  seis_and_volc.py  seisvolc_point.py  utils.py  water_level_station.py  wmo_observing_stations.py
(+36 files in other folders)
