[tool.poetry]
name = "jma-codes"
version = "0.1.0"
description = "気象庁の各種コード表や定数値などを利用しやすいJSONに変換します。"
authors = ["Taku Fukada <naninunenor@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.1"
xlrd = "^2.0.1"
lxml = "^4.9.1"
requests = "^2.27.1"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
flake8 = "^4.0.1"
flake8-bugbear = "^22.1.11"
mypy = "^0.940"
pre-commit = "^2.17.0"
pytest = "^7.0.1"
pytest-cov = "^3.0.0"
isort = "^5.10.1"
pandas-stubs = "^1.2.0"
types-requests = "^2.27.11"

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
