[project]
name = "jma-codes"
version = "0.1.0"
description = "気象庁の各種コード表や定数値などを利用しやすいJSONに変換します"
authors = [
    { name = "Taku Fukada", email = "naninunenor@gmail.com" },
]
dependencies = [
    "pandas>=2.2.2",
    "xlrd>=2.0.1",
    "lxml>=5.2.2",
    "requests>=2.32.3",
    "pydantic>=2.8.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest-cov>=5.0.0",
    "types-requests>=2.32.0.20240712",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/jma_codes"]
